maybe fix opaque bg on horizontal scrollbar

--- a/docs/assets/nookdata.css
+++ b/docs/assets/nookdata.css
@@ -228,7 +228,7 @@ body .critter-panel.obtained {
   width: 5px;
   height: 5px;
 }
-::-webkit-scrollbar-track, ::-webkit-scrollbar-corner {
+::-webkit-scrollbar-track, ::-webkit-scrollbar-track:horizontal, ::-webkit-scrollbar-corner {
   background-color: transparent;
 }
 ::-webkit-scrollbar-thumb {
